test/corpus/01-lexical.txt
==================
include: single td header
==================
#include "ops.td"
---

(source_file
  (include_directive
    (string)))

==================
include: multiple directives
==================
#include "ops.td"
#include "rules.pdll"
---

(source_file
  (include_directive
    (string))
  (include_directive
    (string)))

==================
string: plain quoted
==================
#include "foo.td"
---

(source_file
  (include_directive
    (string)))

==================
string: escaped characters
==================
#include "path\\to\"file\n"
---

(source_file
  (include_directive
    (string)))

==================
string: empty quoted
==================
#include ""
---

(source_file
  (include_directive
    (string)))

==================
code_block: as constraint body
==================
Constraint Foo() [{ return isFoo(); }];
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list)
    (code_block
      (code_block_content))))

==================
code_block: containing braces and keywords
==================
Rewrite Bar() [{
  if (cond) { doThing(); }
  return result;
}];
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list)
    (code_block
      (code_block_content))))

==================
code_block: containing bracket before brace
==================
Rewrite Bar() [{ return T{v[i]}; }];
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list)
    (code_block
      (code_block_content))))

==================
comment: top-level
==================
// file header
#include "foo.td"
---

(source_file
  (comment)
  (include_directive
    (string)))

==================
comment: between statements
==================
Pattern {
  // comment between stmts
  erase _: Op;
}
---

(source_file
  (pattern_decl
    (comment)
    (erase_statement
      (variable_def
        (identifier)
        (type_constraint)))))

==================
comment: trailing after statement
==================
Pattern {
  erase _: Op; // trailing
}
---

(source_file
  (pattern_decl
    (erase_statement
      (variable_def
        (identifier)
        (type_constraint)))
    (comment)))
