test/corpus/04-declarations.txt
==================
constraint: forward decl
==================
Constraint Foo();
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list)))

==================
constraint: forward decl with single arg
==================
Constraint Foo(arg: Value);
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))))

==================
constraint: forward decl with multiple args
==================
Constraint Foo(a: Value, b: Attr);
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint))
      (argument
        (identifier)
        (type_constraint)))))

==================
constraint: native code block
==================
Constraint Foo() [{ return true; }];
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list)
    (code_block
      (code_block_content))))

==================
constraint: lambda body
==================
Constraint Foo(a: Attr) => a;
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (identifier)))

==================
constraint: compound body
==================
Constraint Foo(x: Value) {
  erase _: Op;
}
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
constraint: result type
==================
Constraint Foo() -> Attr;
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list)
    (type_constraint)))

==================
constraint: result type with lambda body
==================
Constraint Foo(arg: Value) -> Value => arg;
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (type_constraint)
    (identifier)))

==================
constraint: tuple result type
==================
Constraint Foo() -> (x: Value, y: Attr);
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list)
    (type_constraint
      (tuple_type
        (named_type_constraint
          (identifier)
          (type_constraint))
        (named_type_constraint
          (identifier)
          (type_constraint))))))

==================
constraint: inline anonymous, no name
==================
Constraint Outer() {
  Constraint() {};
}
---

(source_file
  (constraint_decl
    (identifier)
    (argument_list)
    (constraint_decl
      (argument_list))))

==================
rewrite: forward decl
==================
Rewrite Bar();
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list)))

==================
rewrite: forward decl with args
==================
Rewrite Bar(a: Value, b: Attr);
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint))
      (argument
        (identifier)
        (type_constraint)))))

==================
rewrite: native code block
==================
Rewrite Bar(op: Op) [{ return someFn(op); }];
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (code_block
      (code_block_content))))

==================
rewrite: lambda body
==================
Rewrite Bar(inputs: ValueRange) => op<my.foo>(inputs);
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (op_expr
      (identifier)
      (expression_list
        (identifier)))))

==================
rewrite: compound body
==================
Rewrite Bar(x: Op) {
  erase x;
}
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (erase_stmt
      (identifier))))

==================
rewrite: result type
==================
Rewrite Bar() -> Op;
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list)
    (type_constraint)))

==================
rewrite: result type with lambda body
==================
Rewrite Bar(a: Op) -> Op => a;
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list
      (argument
        (identifier)
        (type_constraint)))
    (type_constraint)
    (identifier)))

==================
rewrite: tuple result type
==================
Rewrite Bar() -> (a: Value, b: Attr);
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list)
    (type_constraint
      (tuple_type
        (named_type_constraint
          (identifier)
          (type_constraint))
        (named_type_constraint
          (identifier)
          (type_constraint))))))

==================
rewrite: inline anonymous, no name
==================
Rewrite Outer() {
  Rewrite() {};
}
---

(source_file
  (rewrite_decl
    (identifier)
    (argument_list)
    (rewrite_decl
      (argument_list))))

==================
pattern: anonymous, single stmt body
==================
Pattern { erase _: Op; }
---

(source_file
  (pattern_decl
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
pattern: named
==================
Pattern Foo { erase _: Op; }
---

(source_file
  (pattern_decl
    (identifier)
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
pattern: benefit metadata
==================
Pattern Foo with benefit(10) { erase _: Op; }
---

(source_file
  (pattern_decl
    (identifier)
    (pattern_metadata
      (benefit_metadata
        (integer)))
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
pattern: recursion metadata
==================
Pattern Foo with recursion { erase _: Op; }
---

(source_file
  (pattern_decl
    (identifier)
    (pattern_metadata
      (recursion_metadata))
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
pattern: benefit and recursion
==================
Pattern Foo with benefit(5), recursion { erase _: Op; }
---

(source_file
  (pattern_decl
    (identifier)
    (pattern_metadata
      (benefit_metadata
        (integer))
      (recursion_metadata))
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
pattern: lambda body
==================
Pattern Foo => erase _: Op;
---

(source_file
  (pattern_decl
    (identifier)
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
pattern: lambda body with metadata
==================
Pattern Foo with benefit(1) => erase _: Op;
---

(source_file
  (pattern_decl
    (identifier)
    (pattern_metadata
      (benefit_metadata
        (integer)))
    (erase_stmt
      (variable_def
        (identifier)
        (type_constraint)))))

==================
pattern: multi-statement body
==================
Pattern Foo {
  let x: Op;
  erase x;
}
---

(source_file
  (pattern_decl
    (identifier)
    (let_statement
      (identifier)
      (type_constraint))
    (erase_stmt
      (identifier))))
